feat: adiciona template
