# docs/swagger.json
@@ -19,7 +19,7 @@
     "paths": {
         "/download-qrcode": {
             "get": {
-                "description": "Faz o download de um QR code para o código PIX gerado",
+                "description": "Faz o download de um QR code para o código PIX gerado, opcionalmente aplicando um template",
                 "produces": [
                     "image/png",
                     "application/json"
@@ -40,6 +40,12 @@
                         "type": "string",
                         "description": "Formato de resposta (json ou png, padrão é png)",
                         "name": "format",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Nome do template a ser aplicado (ex: template_pix_1)",
+                        "name": "template",
                         "in": "query"
                     }
                 ],
